--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
             <p>Contato: <a href="mailto:contato@formoflow.com.br" class="contato">contato@formoflow.com.br</a></p>
             <p>Suporte: <a href="mailto:suporte@formoflow.com.br" class="contato">suporte@formoflow.com.br</a></p>
             <p>SAC: <a href="mailto:sac@formoflow.com.br" class="contato">sac@formoflow.com.br</a></p>
-            <p class="contato">© Otavio Custódio Zampar</p>
+            <p class="contato">© Otávio Custódio Zampar</p>
             <div style="position: absolute; top: 0%; left: 20px; top: 20px;" id="github">
                 <a href="https://github.com/otavio-zampar" rel="noopener" class="noCopy" style="display: initial;"><img src="./src/github-mark.svg" style="height: 1.5rem;"></a>
                 <a href="https://github.com/otavio-zampar" rel="noopener" class="noCopy" style="display: none;"><img src="./src/github-mark-white.svg" style="height: 1.5rem; left: calc(50vw - 1.5rem);"></a>
