nd d+ mudei o footer

--- a/index.html
+++ b/index.html
@@ -240,8 +240,8 @@
         <div id="contato">
             <p class="contato" style="margin-left: calc(1.5rem + 20px);">CONTATO</p>
             <br>
-            <p>Contato: <a href="mailto:contato@formoflow.com.br" class="contato">contato@formoflow.com.br</a></p>
-            <p>Suporte: <a href="mailto:suporte@formoflow.com.br" class="contato">suporte@formoflow.com.br</a></p>
+            <p>Elogios? <a href="mailto:contato@formoflow.com.br" class="contato">contato@formoflow.com.br</a></p>
+            <p>Dúvidas? <a href="mailto:suporte@formoflow.com.br" class="contato">suporte@formoflow.com.br</a></p>
             <p>SAC: <a href="mailto:sac@formoflow.com.br" class="contato">sac@formoflow.com.br</a></p>
             <p class="contato">© Otávio Custódio Zampar</p>
             <div style="position: absolute; top: 0%; left: 20px; top: 20px;" id="github">
