--- a/index.html
+++ b/index.html
@@ -80,6 +80,12 @@
 </head>
 <body style="color:var(--Black); background-color: var(--AlmostWhite); overflow-y: hidden;"> <!-- overflow: hidden; -->
 
+    <div id="BTNAlerta">
+        <div class="alert alert-dark fade show" role="alert">
+            <strong>Copiado!</strong>
+        </div>
+    </div>
+
     <div id="whereHeader" class="nocopy"></div>
     <div id="whereSidenavC" class="nocopy"></div>
     <div id="whereSidenavU" class="nocopy"></div>
@@ -213,10 +219,6 @@
             criaBckgnd(200);
         </script>
 
-        <!-- <svg id="svgContainer" width="100vw" height="100vh">
-            <line x1="0" y1="0" x2="200" y2="200" style="stroke:rgb(255,0,0);stroke-width:2" />
-        </svg> -->
-
         <input type="text" id="searchBar" placeholder="Pesquisar...">
         <!-- when clicking, the fisrt result should be selected -->
         <svg xmlns="https://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16" id="lupa" onclick="{
@@ -230,10 +232,16 @@
             <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
         </svg>
 
+        
+
         <div id="pesquisa">
             <ul id="lista" class="absolute" style="overflow:auto;"></ul>
         </div>
         
+    </div>
+
+    <div class="alert alert-dark alert-dismissible fade show" role="alert" id="aa">
+        <strong>Copiado!</strong>
     </div>
 
     <div id="whereFooter" class="nocopy">
