add algebra, computaçao

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <script src="./JS/math/perimetro.js"></script>
     <script src="./JS/math/volumes.js"></script>
     <script src="./JS/math/modificadores.js"></script>
+    <script src="./JS/math/computacao.js"></script>
     <script src="./JS/math/algebra.js"></script>
 
     <!-- coisa das janelas/capsulas -->
