--- a/main/sidenavUpload.html
+++ b/main/sidenavUpload.html
@@ -8,14 +8,20 @@
     <input type="hidden" name="MAX_FILE_SIZE" value="20971520" />
     <label for="file-upload" class="BTNFile"></label>
     <input id="file-upload" type="file" accept="image/*" onchange="{
-        const reader = new FileReader();
-        reader.onload = function(e) {
-            const img = new Image();
-            img.src = e.target.result;
-            img.onload = function() {
-                uploadImg(e.target.result, img.naturalHeight, img.naturalWidth);
+        var maxSize = 20 * 1024 * 1024;
+        if (this.files[0].size > maxSize) {
+            alert('Arquivo maior que 20MB não serão exibidos');
+            this.value = '';
+        }else{
+            const reader = new FileReader();
+            reader.onload = function(e) {
+                const img = new Image();
+                img.src = e.target.result;
+                img.onload = function() {
+                    uploadImg(e.target.result, img.naturalHeight, img.naturalWidth);
+                };
             };
-        };
-        reader.readAsDataURL(this.files[0]);
+            reader.readAsDataURL(this.files[0]);
+        }
         }">
 </div>
