--- a/main/sidenavCalculadora.html
+++ b/main/sidenavCalculadora.html
@@ -119,7 +119,7 @@
 
 <!-- script pra #answer enviar quando apertar enter -->
 <script>
-    $("#answer").keyup(function(event) {
+    $("#answer").keydown(function(event) {
             if (event.which === 13) {
                 // O código 13 corresponde à tecla "Enter"
                 document.calculator.preAns.value = document.calculator.ans.value;
