--- a/main/sidenavUpload.html
+++ b/main/sidenavUpload.html
@@ -10,7 +10,11 @@
     <input id="file-upload" type="file" accept="image/*" onchange="{
         var maxSize = 20 * 1024 * 1024;
         if (this.files[0].size > maxSize) {
-            alert('Arquivo maior que 20MB não serão exibidos');
+            document.getElementById('BTNAlerta').firstElementChild.innerHTML = 'Arquivos maiores que 20MB não serão exibidos';
+            document.getElementById('BTNAlerta').style.display = 'initial';
+            setTimeout(() => {
+                document.getElementById('BTNAlerta').style.display = 'none';
+            }, 2000);
             this.value = '';
         }else{
             const reader = new FileReader();
