lixeira na area de desenho, solziho e lua p tema

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                     <button style="margin: 0px; width: 100%; height: max(3vw, 1rem); font-size: max(1.1vw, 1rem);" onclick="{
                     // perguntar se quer fundo transparente
                         download_img();
-                    }">Save</button>
+                    }">Salvar</button>
                     <!-- mandar para a area de trabalho -->
                     <button style="margin: 0px; width: 100%; height: max(4vw, 1rem); font-size: max(1.1vw, 1rem);" onclick="{
                         // perguntar se quer fundo transparente
@@ -201,9 +201,9 @@
             </div>
 
             <!-- confirm('Limpar a tela?'); -->
-            <svg xmlns="https://www.w3.org/2000/svg" width="16" height="16" fill="var(--BaseColor)" class="bi bi-x" viewBox="0 0 16 16" style="height: 2.5rem; width:2.5rem; top: 5vh; right: 0.5vw; cursor: pointer; float: right; position: absolute;" onmousedown="clearCanvas();"> 
-                <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
-            </svg>
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="var(--BaseColor)" class="bi bi-trash3" viewBox="0 0 16 16" style="height: 2rem; width:2rem; top: calc(5vh + 0.5rem); right: 2vw; cursor: pointer; float: right; position: absolute;" onmousedown="clearCanvas();">
+                <path d="M6.5 1h3a.5.5 0 0 1 .5.5v1H6v-1a.5.5 0 0 1 .5-.5ZM11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3A1.5 1.5 0 0 0 5 1.5v1H2.506a.58.58 0 0 0-.01 0H1.5a.5.5 0 0 0 0 1h.538l.853 10.66A2 2 0 0 0 4.885 16h6.23a2 2 0 0 0 1.994-1.84l.853-10.66h.538a.5.5 0 0 0 0-1h-.995a.59.59 0 0 0-.01 0H11Zm1.958 1-.846 10.58a1 1 0 0 1-.997.92h-6.23a1 1 0 0 1-.997-.92L3.042 3.5h9.916Zm-7.487 1a.5.5 0 0 1 .528.47l.5 8.5a.5.5 0 0 1-.998.06L5 5.03a.5.5 0 0 1 .47-.53Zm5.058 0a.5.5 0 0 1 .47.53l-.5 8.5a.5.5 0 1 1-.998-.06l.5-8.5a.5.5 0 0 1 .528-.47ZM8 4.5a.5.5 0 0 1 .5.5v8.5a.5.5 0 0 1-1 0V5a.5.5 0 0 1 .5-.5Z"/>
+              </svg>
 
             <!-- aqui é realmente a area de desenhar -->
             <div style="height:90vh; width: 50vw; left: 16vw;  top: 5vh; border-radius: 15px; position: absolute;">
