--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
     <script src="./JS/background.js"></script>
 
     <!-- hey, muda esse negocio para instantâneamente colocar as fórmulas em inglês -->
-    <script src="./JS/data/dataPt-Br.js"></script>
+    <!-- <script src="./JS/data/dataPt-Br.js"></script> -->
     <!-- <script src="./JS/data/dataEn-Us.js"></script> -->
+    <script src="./JS/data/dataSp-Mx.js"></script>
     
 
 
