--- a/main/header.html
+++ b/main/header.html
@@ -11,7 +11,7 @@
             document.getElementById('contato').style.top = '100vh';
             isSet = false;
         }
-    }">Contato</button>
+    }" class="traduzir">Contato</button>
 
     <div id="tema" onclick="mudaTema(dark); dark = !dark;">
 
