--- a/main/sidenavUpload.html
+++ b/main/sidenavUpload.html
@@ -6,7 +6,7 @@
     </svg>
 
     <input type="hidden" name="MAX_FILE_SIZE" value="20971520" />
-    <label for="file-upload" class="BTNFile"></label>
+    <label for="file-upload" class="BTNFile traduzir" hidden>Upload de Imagem</label>
     <input id="file-upload" type="file" accept="image/*" onchange="{
         var maxSize = 20 * 1024 * 1024;
         if (this.files[0].size > maxSize) {
@@ -19,7 +19,7 @@
         }else{
             const reader = new FileReader();
             reader.onload = function(e) {
-                const img = new Image();
+                const img = new Image();    
                 img.src = e.target.result;
                 img.onload = function() {
                     uploadImg(e.target.result, img.naturalHeight, img.naturalWidth);
