--- a/main/header.html
+++ b/main/header.html
@@ -1,4 +1,4 @@
-<div class="base" id="darker" style="width: 100vw; height: 100vh; z-index: 9984; pointer-events: none;"></div>
+<div class="base sla" id="darker" style="width: 100vw; height: 100vh; z-index: 9984; pointer-events: none;"></div>
 <!--menu superior-->
 <div class="shadow p-1 text-center topMenu">
     <h1 class="noCopy">FORMOFLOW</h1>
